--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-native-community/push-notification-ios": "1.7.1",
     "@react-native-firebase/app": "15.7.0",
     "@react-native-firebase/messaging": "15.7.0",
+    "@react-native-picker/picker": "^2.4.4",
     "react-native": "0.70.7",
     "react-native-code-push": "7.0.5",
     "react-native-device-info": "8.0.1",
@@ -25,7 +26,7 @@
     "react-native-localize": "1.4.2",
     "react-native-push-notification": "^6.1.2",
     "react-native-reanimated": "1.13.1",
-    "react-native-safe-area-context": "4.5.0",
+    "react-native-safe-area-context": "3.1.8",
     "react-native-splash-screen": "3.2.0",
     "@mendix/react-native-sqlite-storage": "5.1.3",
     "react-native-svg": "12.1.0",
