--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "@mendix/react-native-sqlite-storage": "5.1.3",
     "react-native-svg": "12.1.0",
     "react-native-vector-icons": "9.2.0",
-    "react-native-video": "^5.2.0"
+    "react-native-video": "5.2.1"
   },
   "devDependencies": {
     "@babel/runtime": "^7.8.4",
