--- a/android/build.gradle
+++ b/android/build.gradle
@@ -9,9 +9,10 @@ buildscript {
         kotlin_version = "1.5.21"
         excludeAppGlideModule = true
         androidx_lifecycle_version = "2.3.1"
-        playServicesVersion = "17+"
+        playServicesVersion = "18+"
         firebaseMessagingVersion = "21.0.0"
         androidXCore = "1.6.0"
+        androidXBrowser = "1.2.0"
     }
     repositories {
         google()
