--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -21,3 +21,4 @@ android.enableJetifier=true
 org.gradle.configureondemand=true
 android.disableResourceValidation=true
 FLIPPER_VERSION=0.66.0
+android.suppressUnsupportedCompileSdk=33
