--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "native-template",
-  "version": "7.0.0-alpha.1",
+  "version": "7.0.0-beta.3",
   "private": true,
   "scripts": {
     "postinstall": "node patches/apply-patches.js && jetify",
