--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "native-template",
-  "version": "7.0.0-beta.4",
+  "version": "7.0.0",
   "private": true,
   "scripts": {
     "postinstall": "node patches/apply-patches.js && jetify",
     "configure": "native-mobile-toolkit configure --config-path='./config.json' --verbose"
   },
   "dependencies": {
-    "@mendix/native": "alpha",
+    "@mendix/native": "~2.0.0",
     "@react-native-community/async-storage": "1.12.1",
     "@react-native-community/cameraroll": "4.0.1",
     "@react-native-community/datetimepicker": "3.0.3",
