--- a/ios/Podfile
+++ b/ios/Podfile
@@ -73,6 +73,19 @@ post_install do |installer|
 
   __apply_Xcode_12_5_M1_post_install_workaround(installer)
 
+  installer.pods_project.build_configurations.each do |config|
+    config.build_settings['ENABLE_BITCODE'] = 'YES'
+    config.build_settings['OTHER_LDFLAGS'] ||= ['$(inherited)']
+    if config.name == "Debug"
+      config.build_settings['DEAD_CODE_STRIPPING'] = 'YES'
+      config.build_settings['OTHER_LDFLAGS'] << "-fembed-bitcode-marker"
+      config.build_settings['BITCODE_GENERATION_MODE'] = "marker"
+    else
+      config.build_settings['OTHER_LDFLAGS'] << "-fembed-bitcode"
+      config.build_settings['BITCODE_GENERATION_MODE'] = "bitcode"
+    end
+  end
+
   installer.pods_project.targets.each do |target|
     target.build_configurations.each do |config|
       if target.name == "React"
