--- a/appcenter-build-config.json
+++ b/appcenter-build-config.json
@@ -10,7 +10,7 @@
     ],
     "toolsets": {
       "xcode": {
-        "xcodeVersion": "13.0",
+        "xcodeVersion": "14.2",
         "automaticSigning": false,
         "projectOrWorkspacePath": "ios/NativeTemplate.xcworkspace",
         "podfilePath": "ios/Podfile",
@@ -36,7 +36,8 @@
     "environmentVariables": [
       { "name": "CODE_PUSH_KEY", "value": "" },
       { "name": "IS_DEV_APP", "value": false },
-      { "name": "SUPPORTS_MOBILE_TOOLKIT", "value": false }
+      { "name": "SUPPORTS_MOBILE_TOOLKIT", "value": false },
+      { "name": "JAVA_HOME", "value": "$(JAVA_HOME_11_X64)" }
     ],
     "toolsets": {
       "android": {
@@ -51,7 +52,7 @@
       "javascript": {
         "packageJsonPath": "package.json",
         "runTests": false,
-        "nodeVersion": "12.x"
+        "nodeVersion": "14.x"
       },
       "buildscripts": {
         "package.json": {
