--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,7 +1,8 @@
 source 'https://cdn.cocoapods.org/'
 
+deployment_target = '12.4'
 # Uncomment the next line to define a global platform for your project
-platform :ios, '10.0'
+platform :ios, deployment_target
 require_relative '../node_modules/@react-native-community/cli-platform-ios/native_modules'
 require_relative './mendix_utils'
 generate_mendix_delegate
@@ -72,6 +73,19 @@ target 'dev' do
 end
 
 post_install do |installer|
+  installer.pods_project.build_configurations.each do |config|
+    config.build_settings['ENABLE_BITCODE'] = 'YES'
+    config.build_settings['OTHER_LDFLAGS'] ||= ['$(inherited)']
+    if config.name == "Debug"
+      config.build_settings['DEAD_CODE_STRIPPING'] = 'YES'
+      config.build_settings['OTHER_LDFLAGS'] << "-fembed-bitcode-marker"
+      config.build_settings['BITCODE_GENERATION_MODE'] = "marker"
+    else
+      config.build_settings['OTHER_LDFLAGS'] << "-fembed-bitcode"
+      config.build_settings['BITCODE_GENERATION_MODE'] = "bitcode"
+    end
+  end
+
   installer.pods_project.targets.each do |target|
     target.build_configurations.each do |config|
       if target.name == "React"
@@ -89,6 +103,18 @@ post_install do |installer|
     puts "Found Xcode v#{XCODE_VERSION}. Replacing RCTCxxBridge's contents"
     find_and_replace("../node_modules/react-native/React/CxxBridge/RCTCxxBridge.mm", "_initializeModules:(NSArray<id<RCTBridgeModule>> *)modules", "_initializeModules:(NSArray<Class> *)modules")
     find_and_replace("../node_modules/react-native/ReactCommon/turbomodule/core/platform/ios/RCTTurboModuleManager.mm", "RCTBridgeModuleNameForClass(module))", "RCTBridgeModuleNameForClass(Class(module)))")
+  end
+
+  # Ensure deployment_target is set correctly for all projects
+  installer.generated_projects.each do |project|
+    project.targets.each do |target|
+        target.build_configurations.each do |config|
+            config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = deployment_target
+        end
+    end
+    project.build_configurations.each do |bc|
+        bc.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = deployment_target
+    end
   end
 end
 
