--- a/ios/Podfile
+++ b/ios/Podfile
@@ -75,6 +75,7 @@ end
 post_install do |installer|
   installer.pods_project.targets.each do |target|
     target.build_configurations.each do |config|
+      config.build_settings['ONLY_ACTIVE_ARCH'] = 'NO'
       if target.name == "React"
         if config.name == "ReleaseDevApp"
           config.build_settings['GCC_PREPROCESSOR_DEFINITIONS'] ||= ['$(inherited)']
