Add AD_ID permission

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -23,6 +23,9 @@
     <!-- Required for scheduling local notifications -->
     <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM" />
 
+    <!-- If this app uses ads, remove 'tools:node="remove"' to enable ad ID access. -->
+    <uses-permission android:name="com.google.android.gms.permission.AD_ID" tools:node="remove"/>
+
     <!-- Mark the following features as required to filter out devices missing these features. See:
         https://developer.android.com/guide/topics/manifest/uses-feature-element -->
     <uses-feature android:name="android.hardware.camera" android:required="false" />
