--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "configure": "native-mobile-toolkit configure --config-path='./config.json' --verbose"
   },
   "dependencies": {
-    "@mendix/native": "~2.0.4",
+    "@mendix/native": "./mendix-native-2.1.0.tgz",
     "@mendix/react-native-sqlite-storage": "5.1.3",
-    "@react-native-community/async-storage": "1.12.1",
+    "@react-native-async-storage/async-storage": "^1.19.3",
     "@react-native-community/cameraroll": "4.0.1",
     "@react-native-community/datetimepicker": "3.0.3",
     "@react-native-community/masked-view": "0.1.10",
@@ -47,11 +47,12 @@
   "overrides": {
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.70.13"
+    "react-native": "0.70.13",
+    "@react-native-community/cli-platform-android": "9.3.1"
   },
   "resolutions": {
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.70.7"
+    "react-native": "0.70.13"
   }
 }
