--- a/.mx/releases_list.json
+++ b/.mx/releases_list.json
@@ -1198,5 +1198,29 @@
         "published_at": "2021-04-06T13:56:25Z",
         "tarball_url": "https://api.github.com/repos/mendix/native-template/tarball/v5.1.10",
         "zipball_url": "https://api.github.com/repos/mendix/native-template/zipball/v5.1.10"
+    },
+    {
+        "id": 40780276,
+        "tag_name": "v6.1.4",
+        "name": "Hotfix for v6.1.3 for Mendix 9",
+        "draft": false,
+        "prerelease": false,
+        "body": "### Hotfix for v6.1.3\r\n\r\n- We fixed an issue that was causing iOS builds to fail with Native Template v6.1.3.\r\n\r\n### Improvements\r\n\r\nThe iOS apps should now use a single window and handle scene switching with view controllers instead. This should result in better compatibility in some edge cases.\r\n\r\n### Fixes \r\n\r\n- We fixed the App Center scripts to fail early when something is wrong.",
+        "created_at": "2021-03-31T19:14:53Z",
+        "published_at": "2021-03-31T19:18:06Z",
+        "tarball_url": "https://api.github.com/repos/mendix/native-template/tarball/v6.1.4",
+        "zipball_url": "https://api.github.com/repos/mendix/native-template/zipball/v6.1.4"
+    },
+    {
+        "id": 40748109,
+        "tag_name": "v6.1.3",
+        "name": "Improvements for Mendix 9 apps",
+        "draft": false,
+        "prerelease": false,
+        "body": "### Improvements\r\n\r\nThe iOS apps should now use a single window and handle scene switching with view controllers instead. This should result in better compatibility in some edge cases.\r\n\r\n### Fixes \r\n\r\n- We fixed the App Center scripts to fail early when something is wrong.",
+        "created_at": "2021-03-31T09:42:10Z",
+        "published_at": "2021-03-31T09:51:41Z",
+        "tarball_url": "https://api.github.com/repos/mendix/native-template/tarball/v6.1.3",
+        "zipball_url": "https://api.github.com/repos/mendix/native-template/zipball/v6.1.3"
     }
 ]
