--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "dependencies": {
     "@mendix/native": "./mendix-native-2.1.0.tgz",
     "@mendix/react-native-sqlite-storage": "5.1.3",
-    "@react-native-async-storage/async-storage": "^1.19.3",
+    "@react-native-community/async-storage": "1.12.0",
     "@react-native-community/cameraroll": "4.0.1",
     "@react-native-community/datetimepicker": "3.0.3",
     "@react-native-community/masked-view": "0.1.10",
