--- a/.mx/releases_list.json
+++ b/.mx/releases_list.json
@@ -1,17 +1,5 @@
 [
     {
-        "id": 130675884,
-        "tag_name": "v7.0.10",
-        "name": "Release 7.0.10",
-        "draft": false,
-        "prerelease": true,
-        "body": "* Merge pull request #732 from mendix/moo/update-rn-to-0-70-13 (2092dc5)",
-        "created_at": "2023-11-21T14:46:24Z",
-        "published_at": "2023-11-21T14:47:00Z",
-        "tarball_url": "https://api.github.com/repos/mendix/native-template/tarball/v7.0.10",
-        "zipball_url": "https://api.github.com/repos/mendix/native-template/zipball/v7.0.10"
-    },
-    {
         "id": 124993140,
         "tag_name": "v7.0.9",
         "name": "Release v7.0.9",
@@ -1198,5 +1186,17 @@
         "published_at": "2021-04-06T13:56:25Z",
         "tarball_url": "https://api.github.com/repos/mendix/native-template/tarball/v5.1.10",
         "zipball_url": "https://api.github.com/repos/mendix/native-template/zipball/v5.1.10"
+    },
+    {
+        "id": 40780276,
+        "tag_name": "v6.1.4",
+        "name": "Hotfix for v6.1.3 for Mendix 9",
+        "draft": false,
+        "prerelease": false,
+        "body": "### Hotfix for v6.1.3\r\n\r\n- We fixed an issue that was causing iOS builds to fail with Native Template v6.1.3.\r\n\r\n### Improvements\r\n\r\nThe iOS apps should now use a single window and handle scene switching with view controllers instead. This should result in better compatibility in some edge cases.\r\n\r\n### Fixes \r\n\r\n- We fixed the App Center scripts to fail early when something is wrong.",
+        "created_at": "2021-03-31T19:14:53Z",
+        "published_at": "2021-03-31T19:18:06Z",
+        "tarball_url": "https://api.github.com/repos/mendix/native-template/tarball/v6.1.4",
+        "zipball_url": "https://api.github.com/repos/mendix/native-template/zipball/v6.1.4"
     }
 ]
