--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "configure": "native-mobile-toolkit configure --config-path='./config.json' --verbose"
   },
   "dependencies": {
-    "@mendix/native": "~2.0.4",
+    "@mendix/native": "./mendix-native-2.2.0.tgz",
     "@mendix/react-native-sqlite-storage": "5.1.3",
     "@react-native-community/async-storage": "1.12.1",
     "@react-native-community/cameraroll": "4.0.1",
@@ -35,11 +35,11 @@
     "semver": "5.7.2"
   },
   "devDependencies": {
-    "@babel/runtime": "^7.8.4",
+    "@babel/runtime": "^7.20.0",
     "@mendix/native-mobile-toolkit": "latest",
     "detox": "19.13.0",
     "jetifier": "^1.6.3",
-    "metro-react-native-babel-preset": "~0.72.3",
+    "metro-react-native-babel-preset": "0.76.8",
     "patch-package": "^6.2.2"
   },
   "engines": {
