--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@react-native-community/push-notification-ios": "1.10.1",
     "@react-native-firebase/app": "17.3.0",
     "@react-native-firebase/messaging": "17.3.0",
-    "@react-native-picker/picker": "^2.4.8",
+    "@react-native-picker/picker": "2.4.8",
     "@react-native/metro-config": "^0.73.2",
     "react-native": "0.72.7",
     "react-native-code-push": "7.0.5",
@@ -44,7 +44,7 @@
     "patch-package": "^8.0.0"
   },
   "engines": {
-    "node": ">=16"
+    "node": ">=18"
   },
   "overrides": {
     "react": "18.2.0",
