--- a/.github/workflows/android-build-custom-dev-app.yml
+++ b/.github/workflows/android-build-custom-dev-app.yml
@@ -2,7 +2,7 @@ name: '[Android] Custom Dev App CI'
 
 on:
   workflow_dispatch:
-  schedule: 
+  schedule:
     - cron: '0 0 * * *'
   pull_request:
     branches: [master, release/*]
@@ -25,7 +25,7 @@ jobs:
       - name: npm install
         run: npm ci
       - name: Add NDK 23.1.7779620
-        run: echo "y" | sudo ${ANDROID_HOME}/tools/bin/sdkmanager --install "ndk;23.1.7779620"
+        run: echo "y" | ${ANDROID_HOME}/cmdline-tools/latest/bin/sdkmanager --install "ndk;23.1.7779620"
       - name: Build with Gradle
         run: ./gradlew assembleDevDebug
         working-directory: ./android
