--- a/android/app/src/dev/AndroidManifest.xml
+++ b/android/app/src/dev/AndroidManifest.xml
@@ -1,6 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    package="com.mendix.nativetemplate">
+    xmlns:tools="http://schemas.android.com/tools">
 
     <application
         android:name="com.mendix.nativetemplate.DevApplication"
