--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          xmlns:tools="http://schemas.android.com/tools"
-          package="com.mendix.nativetemplate">
+          xmlns:tools="http://schemas.android.com/tools">
 
     <!--    Remove the next line after update react-native-inappbrowser-->
     <uses-permission android:name="android.permission.QUERY_ALL_PACKAGES" tools:node="remove"
