--- a/package.json
+++ b/package.json
@@ -18,17 +18,19 @@
     "@react-native-firebase/messaging": "17.3.0",
     "@react-native-picker/picker": "2.4.8",
     "@react-native/metro-config": "^0.73.2",
+    "@react-navigation/native": "6.1.6",
     "react-native": "0.72.7",
     "react-native-code-push": "7.0.5",
     "react-native-device-info": "8.0.1",
     "react-native-fast-image": "8.3.2",
-    "react-native-gesture-handler": "1.10.3",
+    "react-native-gesture-handler": "2.11.0",
     "react-native-image-picker": "5.0.1",
     "react-native-localize": "1.4.2",
     "react-native-permissions": "3.3.1",
     "react-native-push-notification": "8.1.1",
-    "react-native-reanimated": "1.13.1",
+    "react-native-reanimated": "3.3.0",
     "react-native-safe-area-context": "3.1.8",
+    "react-native-screens": "3.20.0",
     "react-native-splash-screen": "3.2.0",
     "react-native-svg": "12.1.0",
     "react-native-vector-icons": "10.0.3",
