--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native-gesture-handler": "2.11.0",
     "react-native-image-picker": "5.0.1",
     "react-native-localize": "1.4.2",
+    "react-native-pager-view": "^6.2.0",
     "react-native-permissions": "3.3.1",
     "react-native-push-notification": "8.1.1",
     "react-native-reanimated": "1.13.1",
