--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-native-screens": "3.20.0",
     "react-native-splash-screen": "3.2.0",
     "react-native-svg": "12.1.0",
+    "react-native-tab-view": "^3.5.1",
     "react-native-vector-icons": "10.0.3",
     "react-native-video": "5.2.1",
     "semver": "5.7.2"
