Update androidManfist to support open url with links to websites whose apps are installed on the device

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -35,7 +35,7 @@
     <queries>
         <intent>
             <action android:name="android.intent.action.VIEW" />
-            <data android:scheme="https"/>
+            <data android:scheme="https" android:host="*"/>
         </intent>
         <intent>
             <action android:name="android.intent.action.VIEW"/>
