--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "react-native-splash-screen": "3.2.0",
     "react-native-svg": "12.1.0",
     "react-native-vector-icons": "10.0.3",
-    "react-native-video": "5.2.1",
+    "react-native-video": "6.0.0-beta.5",
     "semver": "5.7.2"
   },
   "devDependencies": {
