--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native-pager-view": "^6.3.0",
     "react-native-permissions": "3.3.1",
     "react-native-push-notification": "8.1.1",
+    "react-native-reanimated": "1.13.1",
     "react-native-safe-area-context": "3.1.8",
     "react-native-screens": "3.20.0",
     "react-native-splash-screen": "3.2.0",
