--- a/ios/Podfile
+++ b/ios/Podfile
@@ -21,6 +21,17 @@ if linkage != nil
   use_frameworks! :linkage => linkage.to_sym
 end
 
+def patch_flipper_xcode_15_3
+  file_path = 'Pods/Flipper/xplat/Flipper/FlipperTransportTypes.h'
+  contents = File.read(file_path)
+  unless contents.include?('#include <functional>')
+    File.open(file_path, 'w') do |file|
+      file.puts('#include <functional>')
+      file.puts(contents)
+    end
+  end
+end
+
 def common_pods
   # Comment the next line if you don't want to use dynamic frameworks
   # use_frameworks!
@@ -100,6 +111,10 @@ post_install do |installer|
   end
 
   installer.pods_project.targets.each do |target|
+    if target.name == 'Flipper'
+      patch_flipper_xcode_15_3
+    end
+
     target.build_configurations.each do |config|
       if target.name == "React"
         if config.name == "ReleaseDevApp"
