--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "configure": "native-mobile-toolkit configure --config-path='./config.json' --verbose"
   },
   "dependencies": {
-    "@mendix/native": "3.0.1",
-    "@mendix/react-native-sqlite-storage": "5.1.3",
+    "@mendix/native": "3.0.2-1",
+    "@mendix/react-native-sqlite-storage": "^7.1.0",
     "@react-native-community/async-storage": "1.12.1",
     "@react-native-community/cameraroll": "4.0.1",
     "@react-native-community/datetimepicker": "3.0.3",
