--- a/.github/workflows/ios-build-custom-dev-app.yml
+++ b/.github/workflows/ios-build-custom-dev-app.yml
@@ -9,13 +9,13 @@ on:
 
 jobs:
   build:
-    runs-on: macos-13
+    runs-on: macos-latest
 
     steps:
       - uses: actions/checkout@v2
-      - name: switch XCode to 15.1
+      - name: switch XCode to 14.2
         run: | 
-          sudo xcode-select -s /Applications/Xcode_15.1.app
+          sudo xcode-select -s /Applications/Xcode_14.2.app
       - name: actions/setup-node
         uses: actions/setup-node@v3
         with:
