--- a/.github/workflows/release-it.yml
+++ b/.github/workflows/release-it.yml
@@ -2,6 +2,19 @@ name: Release a new version
 
 on:
   workflow_dispatch:
+    inputs:
+      version:
+        description: 'Version to increment'
+        required: true
+        default: 'patch'
+        type: choice
+        options:
+          - patch
+          - minor
+          - major
+          - preminor
+          - premajor
+          - prepatch
 
 jobs:
   release:
@@ -22,6 +35,6 @@ jobs:
           npm install -g release-it
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git config --global user.name "github-action"
-          release-it --increment=patch --ci --github.release --github.draft --git.commitMessage="chore: release v\${version}"  --git.tagName="v\${version}"
+          release-it --increment=${{ github.event.inputs.version }} --ci --github.release --github.draft --git.commitMessage="chore: release v\${version}"  --git.tagName="v\${version}"
 
       
