--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "configure": "native-mobile-toolkit configure --config-path='./config.json' --verbose"
   },
   "dependencies": {
-    "@mendix/native": "3.0.2-2",
+    "@mendix/native": "3.1.1",
     "@mendix/react-native-sqlite-storage": "^7.1.0",
     "@react-native-community/async-storage": "1.12.1",
     "@react-native-community/cameraroll": "4.0.1",
