--- a/.github/workflows/ios-build-custom-dev-app.yml
+++ b/.github/workflows/ios-build-custom-dev-app.yml
@@ -9,13 +9,13 @@ on:
 
 jobs:
   build:
-    runs-on: macos-latest
+    runs-on: macos-14-arm64
 
     steps:
       - uses: actions/checkout@v2
-      - name: switch XCode to 14.2
+      - name: switch XCode to 14.3.1
         run: | 
-          sudo xcode-select -s /Applications/Xcode_14.2.app
+          sudo xcode-select -s /Applications/Xcode_14.3.1.app
       - name: actions/setup-node
         uses: actions/setup-node@v3
         with:
