--- a/ios/nativeTemplate/Info.plist
+++ b/ios/nativeTemplate/Info.plist
@@ -2,11 +2,6 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>LSApplicationQueriesSchemes</key>
-	<array>
-		<string>mailto</string>
-		<string>tel</string>
-	</array>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
@@ -29,12 +24,17 @@
 	<string>1</string>
 	<key>GoogleMapsApiKey</key>
 	<string></string>
+	<key>LSApplicationQueriesSchemes</key>
+	<array>
+		<string>mailto</string>
+		<string>tel</string>
+	</array>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSAppTransportSecurity</key>
 	<dict>
 		<key>NSAllowsArbitraryLoads</key>
-		<true/>
+		<false/>
 		<key>NSExceptionDomains</key>
 		<dict>
 			<key>localhost</key>
@@ -54,11 +54,11 @@
 	<string>The camera can be used to open apps by scanning a QR code.</string>
 	<key>NSFaceIDUsageDescription</key>
 	<string>Enabling Face ID allows you quick and secure access to your account.</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>To use that feature the app needs access to your location.</string>
 	<key>NSLocationAlwaysUsageDescription</key>
 	<string>To use that feature the app needs access to your location.</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>To use that feature the app needs access to your location.</string>
-	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
 	<string>To use that feature the app needs access to your location.</string>
 	<key>NSMicrophoneUsageDescription</key>
 	<string>To use that feature the app needs access to your microphone.</string>
