--- a/.github/workflows/android-build-custom-dev-app.yml
+++ b/.github/workflows/android-build-custom-dev-app.yml
@@ -25,7 +25,7 @@ jobs:
       - name: npm install
         run: npm ci
       - name: Add NDK 21.4.7075529
-        run: echo "y" | sudo ${ANDROID_HOME}/tools/bin/sdkmanager --install "ndk;21.4.7075529"
+        run: echo "y" | ${ANDROID_HOME}/cmdline-tools/latest/bin/sdkmanager --install "ndk;21.4.7075529"
       - name: Build with Gradle
         run: ./gradlew assembleDevDebug
         working-directory: ./android
