--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "react-native-gesture-handler": "2.11.0",
     "react-native-image-picker": "5.0.1",
     "react-native-localize": "1.4.2",
-    "react-native-pager-view": "^6.3.0",
+    "react-native-pager-view": "6.3.0",
     "react-native-permissions": "3.3.1",
     "react-native-push-notification": "8.1.1",
     "react-native-reanimated": "1.13.1",
@@ -33,7 +33,7 @@
     "react-native-screens": "3.20.0",
     "react-native-splash-screen": "3.2.0",
     "react-native-svg": "12.1.0",
-    "react-native-tab-view": "^3.5.1",
+    "react-native-tab-view": "3.5.1",
     "react-native-vector-icons": "10.0.3",
     "react-native-video": "5.2.1",
     "semver": "5.7.2"
