--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native-push-notification": "8.1.1",
     "react-native-reanimated": "1.13.1",
     "react-native-safe-area-context": "3.1.8",
+    "react-native-schedule-exact-alarm-permission": "^0.1.3",
     "react-native-screens": "3.20.0",
     "react-native-splash-screen": "3.2.0",
     "react-native-svg": "12.1.0",
