--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native-push-notification": "8.1.1",
     "react-native-reanimated": "1.13.1",
     "react-native-safe-area-context": "3.1.8",
+    "react-native-schedule-exact-alarm-permission": "^0.1.5",
     "react-native-splash-screen": "3.2.0",
     "react-native-svg": "12.1.0",
     "react-native-vector-icons": "10.0.3",
