--- a/android/build.gradle
+++ b/android/build.gradle
@@ -30,7 +30,7 @@ buildscript {
     dependencies {
         classpath "com.android.tools.build:gradle:7.4.0"
         classpath "com.facebook.react:react-native-gradle-plugin"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
         apply from: file("../node_modules/@mendix/native/androidlib/mendix.gradle"); applyMendixClassPaths(project)
 
         // NOTE: Do not place your application dependencies here; they belong
