--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -59,7 +59,8 @@
       android:allowBackup="false"
       android:largeHeap="true"
       android:theme="@style/AppTheme"
-      android:requestLegacyExternalStorage="true">
+      android:requestLegacyExternalStorage="true"
+      tools:ignore="GoogleAppIndexingWarning">
       <activity
         android:name="com.mendix.nativetemplate.MainActivity"
         android:label="@string/app_name"
