--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -20,7 +20,7 @@ android.useAndroidX=true
 android.enableJetifier=true
 org.gradle.configureondemand=true
 android.disableResourceValidation=true
-FLIPPER_VERSION=0.182.0
+android.nonTransitiveRClass=true
 android.suppressUnsupportedCompileSdk=33
 
 # Use this property to enable or disable the Hermes JS engine.
