--- a/package.json
+++ b/package.json
@@ -59,6 +59,9 @@
     "node": ">=18"
   },
   "overrides": {
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-native": "0.73.8",
     "@babel/traverse": "7.23.2",
     "unset-value": "2.0.1",
     "semver": "5.7.2"
