--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -121,7 +121,7 @@ dependencies {
     implementation "com.facebook.react:react-android"
 
     implementation "androidx.core:core-ktx:1.3.2"
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlinVersion"
 
     implementation "com.facebook.react:react-native:+"  // From node_modules
 
