--- a/android/build.gradle
+++ b/android/build.gradle
@@ -4,7 +4,8 @@ buildscript {
         minSdkVersion = 21
         compileSdkVersion = 34
         targetSdkVersion = 34
-        kotlinVersion = "1.8.0"
+        kotlin_version = "1.9.0"
+        kotlinVersion = "1.9.0"
         excludeAppGlideModule = true
         androidx_lifecycle_version = "2.3.1"
         playServicesVersion = "18+"
