Set hermes default to true

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -31,7 +31,7 @@ def common_pods
   xcconfig_file = "./Config/config.xcconfig"
   xcconfig = Xcodeproj::Config.new(xcconfig_file)
 
-  hermes_enabled = xcconfig.attributes['HERMES_ENABLED'] || 'false'
+  hermes_enabled = xcconfig.attributes['HERMES_ENABLED'] || 'true'
 
   use_react_native!(
     :path => config[:reactNativePath],
