--- a/ios/Config/config.xcconfig
+++ b/ios/Config/config.xcconfig
@@ -1,7 +1,6 @@
 BUNDLE_DISPLAY_NAME = NativeTemplate
-BUNDLE_IDENTIFIER = com.mendix.native.template
 
-PRODUCT_BUNDLE_IDENTIFIER = $(BUNDLE_IDENTIFIER)$(BUNDLE_IDENTIFIER_APPEND)
+PRODUCT_BUNDLE_IDENTIFIER = com.mendix.native.template$(BUNDLE_IDENTIFIER_APPEND)
 
 RUNTIME_URL = http:\/\/localhost:8080
 
