--- a/ios/Podfile
+++ b/ios/Podfile
@@ -109,7 +109,7 @@ post_install do |installer|
       end
       config.build_settings['GCC_PREPROCESSOR_DEFINITIONS'] ||= ['$(inherited)', '_LIBCPP_ENABLE_CXX17_REMOVED_UNARY_BINARY_FUNCTION']
       
-      # Specify Swift Version=5.0 for resolving archieve errors.
+      # Specify 'Swift Version: 5.0' for resolving archieve errors.
       if target.name == 'react-native-video'
         config.build_settings['SWIFT_VERSION'] = '5.0'
       end
