--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,6 +1,6 @@
 source 'https://cdn.cocoapods.org/'
 
-deployment_target = '12.4'
+deployment_target = '13.4'
 # Uncomment the next line to define a global platform for your project
 platform :ios, deployment_target
 require_relative '../node_modules/react-native/scripts/react_native_pods'
@@ -110,6 +110,11 @@ post_install do |installer|
         end
       end
       config.build_settings['GCC_PREPROCESSOR_DEFINITIONS'] ||= ['$(inherited)', '_LIBCPP_ENABLE_CXX17_REMOVED_UNARY_BINARY_FUNCTION']
+
+      # Specify 'Swift Version: 5.0' for resolving archieve errors.
+      if target.name == 'react-native-video'
+        config.build_settings['SWIFT_VERSION'] = '5.0'
+      end
     end
   end
   # Ensure deployment_target is set correctly for all projects
