Update react-native-permissions to 4.1.5

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,11 +1,17 @@
 source 'https://cdn.cocoapods.org/'
 
-# Resolve react_native_pods.rb with node to allow for hoisting
-require Pod::Executable.execute_command('node', ['-p',
-  'require.resolve(
-    "react-native/scripts/react_native_pods.rb",
-    {paths: [process.argv[1]]},
-  )', __dir__]).strip
+def node_require(script)
+  # Resolve script with node to allow for hoisting
+  require Pod::Executable.execute_command('node', ['-p',
+    "require.resolve(
+      '#{script}',
+      {paths: [process.argv[1]]},
+    )", __dir__]).strip
+end
+
+# Use it to require both react-native's and this package's scripts:
+node_require('react-native/scripts/react_native_pods.rb')
+node_require('react-native-permissions/scripts/setup.rb')
 
 require_relative './mendix_utils'
 
@@ -20,6 +26,11 @@ if linkage != nil
   Pod::UI.puts "Configuring Pod with #{linkage}ally linked Frameworks".green
   use_frameworks! :linkage => linkage.to_sym
 end
+
+setup_permissions([
+  'Camera',
+  'PhotoLibrary',
+])
 
 def common_pods
   # Comment the next line if you don't want to use dynamic frameworks
@@ -48,11 +59,6 @@ def common_pods
 
   # Third party dependencies of dependencies
   pod 'IQKeyboardManager'
-
-  # At least one permission must be added when `react-native-permissions` used
-  permissions_path = '../node_modules/react-native-permissions/ios'
-  pod 'Permission-Camera', :path => "#{permissions_path}/Camera"
-  pod 'Permission-PhotoLibrary', :path => "#{permissions_path}/PhotoLibrary"
 
   # Required MendixNative dependency
   pod 'SSZipArchive'
