--- a/package.json
+++ b/package.json
@@ -62,5 +62,9 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.75.4"
+  },
+  "op-sqlite": {
+    "sqlcipher": true,
+    "performanceMode": "2"
   }
 }
