Update iOS part of react native to 0.75.4

--- a/.gitignore
+++ b/.gitignore
@@ -21,7 +21,7 @@ DerivedData
 *.ipa
 *.xcuserstate
 project.xcworkspace
-ios/.xcode.env.local
+**/.xcode.env.local
 
 # Android/IntelliJ
 #
@@ -35,7 +35,7 @@ local.properties
 
 # iOS
 # 
-ios/Pods/
+**/Pods/
 ios/MendixAppDelegate.m
 
 # node.js
