--- a/ios/Podfile
+++ b/ios/Podfile
@@ -88,7 +88,8 @@ post_install do |installer|
   react_native_post_install(
     installer,
     config[:reactNativePath],
-    :mac_catalyst_enabled => false
+    :mac_catalyst_enabled => false,
+    # :ccache_enabled => true
   )
 
 
