re-add react-native-localize implementation

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -130,6 +130,7 @@ dependencies {
     // Javascript engine
     implementation("com.facebook.react:hermes-android")
 
+    implementation project(':react-native-localize')
     implementation project(":react-native-splash-screen")
     implementation project(":mendixnative-release")
 
