update sed command for linux

--- a/.github/workflows/ios-build-custom-dev-app.yml
+++ b/.github/workflows/ios-build-custom-dev-app.yml
@@ -21,7 +21,7 @@ jobs:
         shell: bash
         working-directory: ./
         run: |
-          sed -i 's/\$(BUNDLE_IDENTIFIER)/com.mendix.native.template/g' ./ios/Config/config.xcconfig
+          sed -i '' 's/\$(BUNDLE_IDENTIFIER)/com.mendix.native.template/g' ./ios/Config/config.xcconfig
 
       - name: actions/setup-node
         uses: actions/setup-node@v3
