--- a/.github/workflows/release-it.yml
+++ b/.github/workflows/release-it.yml
@@ -13,13 +13,13 @@ jobs:
 
       - uses: actions/setup-node@v3
         with:
-          node-version: 16
+          node-version-file: '.nvmrc'
 
       - name: Release a new version
         env:
           GITHUB_TOKEN: ${{ secrets.PUBLIC_REPO_ADMIN_TOKEN }}
         run: |
-          npm install -g release-it@16.2.1
+          npm install -g release-it@16.3.0
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git config --global user.name "github-action"
           release-it --increment=patch --ci --github.release --github.draft --git.commitMessage="chore: release v\${version}"  --git.tagName="v\${version}"
