--- a/.github/workflows/windows-test-npm-installation.yml
+++ b/.github/workflows/windows-test-npm-installation.yml
@@ -12,9 +12,9 @@ jobs:
     runs-on: windows-latest
 
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v2
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
         with:
-          node-version: '16'
+          node-version-file: '.nvmrc'
           architecture: 'x64'
       - run: npm install
