--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -65,7 +65,7 @@
         android:name="com.mendix.nativetemplate.MainActivity"
         android:label="@string/app_name"
         android:screenOrientation="portrait"
-        android:configChanges="keyboard|keyboardHidden|orientation|screenSize|uiMode"
+        android:configChanges="keyboard|keyboardHidden|orientation|screenSize|uiMode|fontScale"
         android:windowSoftInputMode="adjustPan"
         android:exported="true">
         <intent-filter>
