--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -71,7 +71,7 @@ android {
         testBuildType System.getProperty("testBuildType", "debug")
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         resValue "string", "CODE_PUSH_APK_BUILD_TIME", String.format("\"%d\"", System.currentTimeMillis())
-        manifestPlaceholders["cookieEncryption"] = project.hasProperty("com.mendix.mendixnative.cookieEncryption") ? project.property("com.mendix.mendixnative.cookieEncryption") : "false"
+        manifestPlaceholders["cookieEncryption"] = project.hasProperty("mendixnative.cookieEncryption") ? project.property("mendixnative.cookieEncryption") : "false"
     }
     flavorDimensions "mode"
     productFlavors {
