--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -22,4 +22,4 @@ org.gradle.configureondemand=true
 android.disableResourceValidation=true
 android.nonTransitiveRClass=true
 android.suppressUnsupportedCompileSdk=33
-com.mendix.mendixnative.cookieEncryption=false
+mendixnative.cookieEncryption=false
