--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@mendix/native": "7.0.0",
     "@op-engineering/op-sqlite": "9.1.2",
+    "@swan-io/react-native-browser": "0.4.1",
     "@react-native-async-storage/async-storage": "2.0.0",
     "@react-native-community/cameraroll": "4.0.1",
     "@react-native-community/datetimepicker": "8.2.0",
@@ -22,6 +23,7 @@
     "react-native-fast-image": "8.6.3",
     "react-native-gesture-handler": "2.20.2",
     "react-native-image-picker": "7.2.3",
+    "react-native-file-viewer-turbo": "0.3.0",
     "react-native-localize": "3.2.1",
     "react-native-pager-view": "6.4.1",
     "react-native-permissions": "4.1.5",
