Revert "Merge pull request #996 from mendix/fix/pipeline-secret-token-v11"
This reverts commit e1a39fed95eb03a0e09d6c8a184742a555d8b1c6, reversing
changes made to 52f614f4931c2b7578f8b09bb2a9947036b5d208.

--- a/.github/workflows/release-it.yml
+++ b/.github/workflows/release-it.yml
@@ -22,7 +22,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.PUBLIC_REPO_ADMIN_TOKEN }}
 
       - uses: actions/setup-node@v3
         with:
