--- a/.github/actions/slack-notification/action.yml
+++ b/.github/actions/slack-notification/action.yml
@@ -16,9 +16,10 @@ runs:
   using: "composite"
   steps:
     - name: Send Slack notification
-      uses: slackapi/slack-github-action@485a9d42d3a73031f12ec201c457e2162c45d02d # v2
+      uses: slackapi/slack-github-action@b0fa283ad8fea605de13dc3f449259339835fc52 # v2.1.0
       with:
-        channel-id: ${{ inputs.channel-id }}
-        slack-message: ${{ inputs.message }}
-      env:
-        SLACK_BOT_TOKEN: ${{ inputs.bot-token }}
+        method: chat.postMessage
+        token: ${{ inputs.bot-token }}
+        payload: |
+          channel: ${{ inputs.channel-id }}
+          text: ${{ inputs.message }}
