--- a/.github/workflows/ios-build-custom-dev-app.yml
+++ b/.github/workflows/ios-build-custom-dev-app.yml
@@ -48,6 +48,12 @@ jobs:
         run: |
           chmod +x ./appcenter-pre-build.sh
           APPCENTER_XCODE_SCHEME="nativeTemplate" APPCENTER_SOURCE_DIRECTORY="./" IS_DEV_APP=False ./appcenter-pre-build.sh
+      
+      - name: log environment variables
+        shell: bash
+        working-directory: ./
+        run: |
+          - run: echo "$IOS_DUMMY_PROVISION" | base64 --decode | security cms -D - | plutil -extract Name xml1 -o - -
 
       - name: iOS Build Action
         uses: yukiarrr/ios-build-action@v1.12.0
