chore: update React Native to v0.79.3
- Updated @mendix/native
- Upgraded various dependencies including react-native, react-native-gesture-handler, and react-native-screens to their latest compatible versions.

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -25,7 +25,7 @@ buildscript {
         }
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:7.4.2"
+        classpath "com.android.tools.build:gradle:8.1.4"
         classpath "com.facebook.react:react-native-gradle-plugin"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
         classpath 'org.jetbrains.kotlin:compose-compiler-gradle-plugin:2.0.21'
@@ -49,6 +49,9 @@ allprojects {
         }
         maven {
             url "$rootDir/../node_modules/detox/Detox-android"
+        }
+        maven {
+            url "$rootDir/../node_modules/@notifee/react-native/android/libs"
         }
         google()
         maven {
