--- a/package.json
+++ b/package.json
@@ -8,32 +8,32 @@
   },
   "dependencies": {
     "@gorhom/bottom-sheet": "^5.1.1",
-    "@mendix/native": "10.1.7",
+    "@mendix/native": "./mendix-native-10.2.0.tgz",
     "@op-engineering/op-sqlite": "12.0.2",
     "@react-native-async-storage/async-storage": "2.0.0",
     "@react-native-camera-roll/camera-roll": "7.4.0",
-    "@react-native-community/cli": "16.0.2",
-    "@react-native-community/cli-platform-android": "16.0.2",
-    "@react-native-community/cli-platform-ios": "16.0.2",
+    "@react-native-community/cli": "18.0.0",
+    "@react-native-community/cli-platform-android": "18.0.0",
+    "@react-native-community/cli-platform-ios": "18.0.0",
     "@react-native-community/datetimepicker": "8.2.0",
     "@react-native-community/netinfo": "11.4.1",
     "@react-native-picker/picker": "2.11.0",
     "@react-navigation/native": "6.1.18",
     "@notifee/react-native": "9.1.8",
-    "react-native": "0.77.1",
+    "react-native": "0.79.3",
     "react-native-device-info": "14.0.4",
     "react-native-blob-util": "0.21.2",
     "react-native-fast-image": "8.6.3",
-    "react-native-gesture-handler": "2.23.1",
+    "react-native-gesture-handler": "2.25.0",
     "react-native-image-picker": "7.2.3",
     "react-native-localize": "3.2.1",
     "react-native-pager-view": "6.4.1",
     "react-native-permissions": "4.1.5",
     "react-native-push-notification": "8.1.1",
     "react-native-reanimated": "3.16.1",
-    "react-native-safe-area-context": "5.2.0",
+    "react-native-safe-area-context": "5.4.1",
     "react-native-schedule-exact-alarm-permission": "^0.1.3",
-    "react-native-screens": "4.6.0",
+    "react-native-screens": "4.9.1",
     "react-native-splash-screen": "3.2.0",
     "react-native-svg": "15.11.1",
     "react-native-tab-view": "3.5.2",
@@ -44,8 +44,8 @@
   "devDependencies": {
     "@babel/runtime": "^7.20.0",
     "@mendix/native-mobile-toolkit": "latest",
-    "@react-native/babel-preset": "0.77.1",
-    "@react-native/metro-config": "0.77.1",
+    "@react-native/babel-preset": "0.79.3",
+    "@react-native/metro-config": "0.79.3",
     "detox": "19.13.0",
     "jetifier": "^1.6.8",
     "patch-package": "^8.0.0"
@@ -54,15 +54,15 @@
     "node": ">=18"
   },
   "overrides": {
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "react-native": "0.77.1",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "react-native": "0.79.3",
     "unset-value": "2.0.1",
     "semver": "5.7.2"
   },
   "resolutions": {
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "react-native": "0.77.1"
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "react-native": "0.79.3"
   }
 }
