--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@gorhom/bottom-sheet": "^5.1.1",
     "@mendix/native": "10.2.0",
+    "@notifee/react-native": "9.1.8",
     "@op-engineering/op-sqlite": "12.0.2",
     "@react-native-async-storage/async-storage": "2.0.0",
     "@react-native-camera-roll/camera-roll": "7.4.0",
@@ -18,10 +19,9 @@
     "@react-native-community/datetimepicker": "8.2.0",
     "@react-native-picker/picker": "2.11.0",
     "@react-navigation/native": "7.0.14",
-    "@notifee/react-native": "9.1.8",
     "react-native": "0.77.3",
-    "react-native-device-info": "14.0.4",
     "react-native-blob-util": "0.21.2",
+    "react-native-device-info": "14.0.4",
     "react-native-fast-image": "8.6.3",
     "react-native-gesture-handler": "2.23.1",
     "react-native-image-picker": "7.2.3",
@@ -33,12 +33,11 @@
     "react-native-safe-area-context": "5.2.0",
     "react-native-schedule-exact-alarm-permission": "^0.1.3",
     "react-native-screens": "4.6.0",
-    "react-native-splash-screen": "3.2.0",
+    "react-native-bootsplash": "6.3.10",
     "react-native-svg": "15.11.1",
     "react-native-tab-view": "3.5.2",
     "react-native-vector-icons": "10.2.0",
-    "react-native-video": "6.10.0",
-    "semver": "5.7.2"
+    "react-native-video": "6.10.0"
   },
   "devDependencies": {
     "@babel/runtime": "^7.20.0",
@@ -56,8 +55,7 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.77.3",
-    "unset-value": "2.0.1",
-    "semver": "5.7.2"
+    "unset-value": "2.0.1"
   },
   "resolutions": {
     "react": "18.3.1",
